<resources>
    <string name="app_name">MRGS Library</string>

    <!-- logo -->
    <string name="book_logo">Book</string>

    <!-- heading -->
    <string name="mrgs_heading">MRGS Library</string>
    <string name="register_heading">Register</string>
    <string name="login_heading">Login</string>
    <string name="sort_heading">Sort</string>
    <string name="mybook_heading">My Books</string>
    <string name="me_heading">Me</string>

    <!-- label for enter box -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mrgs_email">@students.mrgs.school.nz</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="message">Type a message</string>

    <!-- button label -->
    <string name="register_button">Register an account</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign up</string>
    <string name="back_login_button">Back to login</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_send">Send</string>

    <!-- error -->
    <string name="error_invalid_username">This username is too long</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password does not match with the confirm password</string>
    <string name="error_invalid_password_too_short">Password is too short It need to be at least 8 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="email_short">This email is too short</string>
    <string name="email_long">This email is too long</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>

    <!-- Button -->
    <string name="home_button">Home</string>
    <string name="sort_button">Sort</string>
    <string name="mybook_button">My Book</string>
    <string name="me_button">Me</string>
    <string name="logout_button">Logout</string>
    <string name="issued_button">Issued</string>
    <string name="overdue_button">Overdue</string>
    <string name="renew_button">Renew</string>
    <string name="return_button">Return</string>

    <!-- Label -->
    <string name="home_label">Home</string>
    <string name="sort_label">Sort</string>
    <string name="mybook_label">My Books</string>
    <string name="me_label">Me</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="book_name_label">Name</string>
    <string name="book_author_label">Author</string>
    <string name="book_year_label">Year</string>
    <string name="book_type_label">Type</string>
    <string name="book_theme_label">Theme</string>
    <string name="available_label">Available</string>
    <string name="duedate_label">Due Date</string>

    <!-- input type -->
    <string name="input_type_username">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_</string>
    <string name="input_type_email">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@.</string>
    <string name="input_type_password">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
</resources>
