<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.mrgs.library.MainChatActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/mrgs_heading"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mrgs_library_web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        android:id="@+id/mrgs_library_web"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home_button"
        app:layout_constraintBottom_toTopOf="@+id/home_label"
        app:layout_constraintEnd_toStartOf="@+id/sort_button"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/sort_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/sort_button"
        android:onClick="openSortfromHome"
        app:layout_constraintBottom_toTopOf="@+id/sort_label"
        app:layout_constraintEnd_toStartOf="@+id/mybook_button"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:srcCompat="@drawable/widget"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/mybook_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:contentDescription="@string/mybook_button"
        android:onClick="openMyBookfromHome"
        app:layout_constraintBottom_toTopOf="@+id/mybook_label"
        app:layout_constraintEnd_toStartOf="@+id/me_button"
        app:layout_constraintStart_toEndOf="@+id/sort_button"
        app:srcCompat="@drawable/books"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/me_button"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:contentDescription="@string/me_button"
        android:onClick="openMefromHome"
        app:layout_constraintBottom_toTopOf="@+id/me_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mybook_button"
        app:srcCompat="@drawable/user"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/home_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_label"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sort_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sort_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sort_label"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mybook_label"
        app:layout_constraintStart_toEndOf="@+id/home_label" />

    <TextView
        android:id="@+id/mybook_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mybook_label"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/me_label"
        app:layout_constraintStart_toEndOf="@+id/sort_label" />

    <TextView
        android:id="@+id/me_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/me_label"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mybook_label" />

</androidx.constraintlayout.widget.ConstraintLayout>

