<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/sort_heading"
        android:layout_width="400dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/sort_heading"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sort_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sort_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_heading">
    </androidx.recyclerview.widget.RecyclerView>

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/home_button"
        android:onClick="openHomefromSort"
        app:layout_constraintBottom_toTopOf="@+id/home_label"
        app:layout_constraintEnd_toStartOf="@+id/sort_button"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/sort_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/sort_button"
        app:layout_constraintBottom_toTopOf="@+id/sort_label"
        app:layout_constraintEnd_toStartOf="@+id/mybook_button"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:srcCompat="@drawable/widget"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/mybook_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/mybook_button"
        app:layout_constraintBottom_toTopOf="@+id/mybook_label"
        app:layout_constraintEnd_toStartOf="@+id/me_button"
        app:layout_constraintStart_toEndOf="@+id/sort_button"
        app:srcCompat="@drawable/books"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/me_button"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/me_button"
        android:onClick="openMefromSort"
        app:layout_constraintBottom_toTopOf="@+id/me_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mybook_button"
        app:srcCompat="@drawable/user"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/home_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_label"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sort_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sort_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sort_label"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mybook_label"
        app:layout_constraintStart_toEndOf="@+id/home_label" />

    <TextView
        android:id="@+id/mybook_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mybook_label"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/me_label"
        app:layout_constraintStart_toEndOf="@+id/sort_label" />

    <TextView
        android:id="@+id/me_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/me_label"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mybook_label" />


</androidx.constraintlayout.widget.ConstraintLayout>