<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/issued_recyclerview_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/issued_book_cover"
                android:layout_width="100dp"
                android:layout_height="170dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/book_cover"
                android:layout_centerHorizontal="false">
            </ImageView>

            <TextView
                android:id="@+id/issued_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/issued_book_cover"
                android:text="@string/book_name_label"
                android:textColor="@color/black"
                android:textSize="12sp">
            </TextView>

            <TextView
                android:id="@+id/issued_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/book_author_label"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_toRightOf="@id/issued_book_cover"
                android:layout_below="@id/issued_book_name">
            </TextView>

            <TextView
                android:id="@+id/issued_book_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/book_year_label"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_toRightOf="@id/issued_book_cover"
                android:layout_below="@id/issued_book_author">
            </TextView>

            <TextView
                android:id="@+id/issued_book_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/book_type_label"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_toRightOf="@id/issued_book_cover"
                android:layout_below="@id/issued_book_year">
            </TextView>

            <TextView
                android:id="@+id/issued_book_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/book_theme_label"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_toRightOf="@id/issued_book_cover"
                android:layout_below="@id/issued_book_type">
            </TextView>

            <TextView
                android:id="@+id/issue"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_below="@id/issued_book_theme"
                android:layout_toRightOf="@id/issued_book_cover"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/duedate_label"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold">
            </TextView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>